Add Password Reset

--- a/dashboard.html
+++ b/dashboard.html
@@ -26,7 +26,7 @@
                   Hello, John Doe
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                  <li><a class="dropdown-item" href="#">Logout</a></li>
+                  <li><a class="dropdown-item" href="index.html">Logout</a></li>
                 </ul>
               </div>
         </div>
