--- a/reset_password.html
+++ b/reset_password.html
@@ -16,7 +16,7 @@
                         <div class="card">
                             <div class="card-body">
                               <div class="mb-3">
-                                <h1 class="h2">Password Reset</h1>
+                                <h1 class="h2">Backend Project Login</h1>
                               </div>
                               <div class="alert alert-info alert-dismissible" role="alert">
                                 Alert about something
@@ -26,16 +26,8 @@
                                     <input id="email" class="form-control" name="email" type="email">
                                     <div class="small text-danger my-2"><em>Error message</em></d>
                                 </div>
-                                <div class="form-group mb-3">
-                                  <label for="password" class="form-label font-weight-bold">Password</label>
-                                  <input id="password" class="form-control" name="password" type="password">
-                              </div>
-                              <div class="mb-3">
-                                <a href="reset_password.html">Forgot password?</a>
-                              </div>
                               <div class="d-flex justify-content-end">
-                                <!-- <button class="btn btn-primary">Login</button> -->
-                                <a href="dashboard.html" class="btn btn-primary">Login</a>
+                                <button class="btn btn-primary">Reset Password</button>
                               </div>
                             </div>
                         </div>
